--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,9 @@
 *:after {
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-weight: 300;
   background: #0c1c3e;
@@ -185,6 +188,114 @@ nav .menu .menu_close {
 .main .team_go_rocket,
 .main .download {
   overflow: hidden;
+  position: relative;
+}
+.main .intro .content_wrap .content,
+.main .new_user .content_wrap .content,
+.main .news .content_wrap .content,
+.main .events .content_wrap .content,
+.main .catch .content_wrap .content,
+.main .adventure .content_wrap .content,
+.main .team_go_rocket .content_wrap .content,
+.main .download .content_wrap .content {
+  text-align: left;
+}
+.main .intro .content_wrap .content .title,
+.main .new_user .content_wrap .content .title,
+.main .news .content_wrap .content .title,
+.main .events .content_wrap .content .title,
+.main .catch .content_wrap .content .title,
+.main .adventure .content_wrap .content .title,
+.main .team_go_rocket .content_wrap .content .title,
+.main .download .content_wrap .content .title {
+  font-weight: 900;
+}
+@media (max-width: 767px) {
+  .main .intro .content_wrap .content .title,
+  .main .new_user .content_wrap .content .title,
+  .main .news .content_wrap .content .title,
+  .main .events .content_wrap .content .title,
+  .main .catch .content_wrap .content .title,
+  .main .adventure .content_wrap .content .title,
+  .main .team_go_rocket .content_wrap .content .title,
+  .main .download .content_wrap .content .title {
+    font-size: 28px;
+    line-height: 34px;
+  }
+}
+@media (min-width: 768px) {
+  .main .intro .content_wrap .content .title,
+  .main .new_user .content_wrap .content .title,
+  .main .news .content_wrap .content .title,
+  .main .events .content_wrap .content .title,
+  .main .catch .content_wrap .content .title,
+  .main .adventure .content_wrap .content .title,
+  .main .team_go_rocket .content_wrap .content .title,
+  .main .download .content_wrap .content .title {
+    font-size: 32px;
+    line-height: 45px;
+  }
+}
+@media (min-width: 1204px) {
+  .main .intro .content_wrap .content .title,
+  .main .new_user .content_wrap .content .title,
+  .main .news .content_wrap .content .title,
+  .main .events .content_wrap .content .title,
+  .main .catch .content_wrap .content .title,
+  .main .adventure .content_wrap .content .title,
+  .main .team_go_rocket .content_wrap .content .title,
+  .main .download .content_wrap .content .title {
+    font-size: 36px;
+    line-height: 52px;
+  }
+}
+.main .intro .content_wrap .content .body,
+.main .new_user .content_wrap .content .body,
+.main .news .content_wrap .content .body,
+.main .events .content_wrap .content .body,
+.main .catch .content_wrap .content .body,
+.main .adventure .content_wrap .content .body,
+.main .team_go_rocket .content_wrap .content .body,
+.main .download .content_wrap .content .body {
+  padding-top: 1em;
+}
+.main .intro .content_wrap .content .button_pill,
+.main .new_user .content_wrap .content .button_pill,
+.main .news .content_wrap .content .button_pill,
+.main .events .content_wrap .content .button_pill,
+.main .catch .content_wrap .content .button_pill,
+.main .adventure .content_wrap .content .button_pill,
+.main .team_go_rocket .content_wrap .content .button_pill,
+.main .download .content_wrap .content .button_pill {
+  padding-top: 1.5em;
+}
+.main .intro .content_wrap .content .button_pill a,
+.main .new_user .content_wrap .content .button_pill a,
+.main .news .content_wrap .content .button_pill a,
+.main .events .content_wrap .content .button_pill a,
+.main .catch .content_wrap .content .button_pill a,
+.main .adventure .content_wrap .content .button_pill a,
+.main .team_go_rocket .content_wrap .content .button_pill a,
+.main .download .content_wrap .content .button_pill a {
+  font-size: 14px;
+  color: #0061af;
+  font-weight: 700;
+  border: 2px solid #0061af;
+  padding: 8px 24px;
+  border-radius: 999px;
+  background-color: #fff;
+  transition: background-color 0.3s ease;
+  text-decoration: none;
+}
+.main .intro .content_wrap .content .button_pill a:hover,
+.main .new_user .content_wrap .content .button_pill a:hover,
+.main .news .content_wrap .content .button_pill a:hover,
+.main .events .content_wrap .content .button_pill a:hover,
+.main .catch .content_wrap .content .button_pill a:hover,
+.main .adventure .content_wrap .content .button_pill a:hover,
+.main .team_go_rocket .content_wrap .content .button_pill a:hover,
+.main .download .content_wrap .content .button_pill a:hover {
+  background-color: #d1eefd;
 }
 @media (min-width: 0px) {
   .main .intro .mobile,
@@ -234,28 +345,225 @@ nav .menu .menu_close {
     display: block;
   }
 }
+.main .intro {
+  height: 800px;
+}
+@media (max-width: 767px) {
+  .main .intro {
+    min-height: 720px;
+  }
+}
+@media (min-width: 768px) and (min-width: 1023px) {
+  .main .intro {
+    min-height: 720px;
+  }
+}
+@media (min-width: 1024px) {
+  .main .intro {
+    min-height: 720px;
+  }
+}
+.main .intro img.background {
+  object-fit: cover;
+  height: 800px;
+}
+@media (max-width: 767px) {
+  .main .intro img.background {
+    min-height: 720px;
+  }
+}
+.main .intro .content_wrap {
+  grid-template-columns: 1fr 4fr 1fr;
+  top: calc(8.5% + 80px);
+  left: 0;
+  margin: 0 auto;
+  width: 55%;
+}
+@media (max-width: 767px) {
+  .main .intro .content_wrap {
+    top: 90px;
+  }
+}
+@media (min-width: 1024px) {
+}
+.main .intro .content_wrap .content {
+  color: #fff;
+  grid-column: 2/3;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+  text-align: center;
+}
+.main .intro .callout_wrap {
+  margin: 0 auto;
+  grid-template-columns: 1fr 4fr 1fr;
+}
+@media (max-width: 768px) {
+  .main .intro .callout_wrap {
+    top: calc(25% + 80px);
+  }
+}
+@media (min-width: 768px) {
+  .main .intro .callout_wrap {
+    top: calc(40% + 80px);
+  }
+}
+.main .intro .callout_wrap img {
+  width: unset;
+}
+.main .intro .callout_wrap .callout {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-column: 2/3;
+  text-align: center;
+}
+.main .intro .callout_wrap .callout .logo {
+  grid-row: 1/2;
+}
+.main .intro .callout_wrap .callout .logo img {
+  height: 115px;
+}
+@media (max-width: 768px) {
+  .main .intro .callout_wrap .callout .logo img {
+    height: 115px;
+  }
+}
+@media (min-width: 1024px) {
+  .main .intro .callout_wrap .callout .logo img {
+    height: 180px;
+  }
+}
+.main .intro .callout_wrap .callout .badges {
+  display: flex;
+  column-gap: 12px;
+  justify-content: center;
+  align-self: center;
+  grid-row: 3/4;
+}
+@media (max-width: 768px) {
+  .main .intro .callout_wrap .callout .badges {
+    flex-direction: column;
+    align-items: center;
+    align-self: end;
+    row-gap: 12px;
+  }
+}
+@media (min-width: 1024px) {
+  .main .intro .callout_wrap .callout .badges {
+    grid-row: 2/3;
+  }
+}
+.main .intro .callout_wrap .callout .badges img {
+  height: 40px;
+}
+.main .intro .intro_jump_wrap {
+  position: absolute;
+}
+@media (min-width: 768px) and (min-width: 1023px) {
+  .main .intro .intro_jump_wrap {
+    right: 60px;
+    bottom: 60px;
+  }
+}
+.main .intro .intro_jump_wrap img {
+  opacity: 0.6;
+  transition: ease-in-out 0.1s;
+}
+.main .intro .intro_jump_wrap img:hover {
+  opacity: 1;
+}
 .main .new_user {
-  min-height: 222px;
+  max-height: 222px;
+}
+.main .new_user .content_wrap {
+  position: absolute;
+  top: 0;
+  height: 222px;
+  grid-template-columns: 1fr 8fr 1fr;
+}
+@media (min-width: 768px) {
+  .main .new_user .content_wrap {
+    margin: 0;
+    padding: 0 24px;
+    max-width: 100%;
+  }
+}
+.main .new_user .content_wrap .new_user_inner {
+  grid-template-columns: 130px 1fr 1fr;
+  grid-column: 1/5;
+  padding: 0;
+}
+@media (min-width: 768px) and (max-width: 1023px) {
+  .main .new_user .content_wrap .new_user_inner {
+    padding: 40px 0;
+  }
+}
+@media (min-width: 1024px) {
+  .main .new_user .content_wrap .new_user_inner {
+    grid-column: 2/3;
+  }
+}
+.main .new_user .content_wrap .new_user_inner div {
+  align-self: center;
+}
+.main .new_user .content_wrap .new_user_inner img {
+  height: 130px;
+  width: auto;
+}
+.main .new_user .content_wrap .new_user_inner .icon {
+  grid-column: 1/2;
+}
+.main .new_user .content_wrap .new_user_inner .content {
+  grid-column: 2/3;
+}
+.main .new_user .content_wrap .new_user_inner .image {
+  grid-column: 3/4;
+}
+.main .news .loading {
+  height: 30px;
+  width: auto;
+}
+.main .news.ready .loading {
+  display: none;
+}
+.main .news .content_wrap {
+  height: 100%;
+}
+@media (min-width: 768px) {
+  .main .news .content_wrap {
+    padding: 60px 0;
+  }
+}
+.main .news .content_wrap .content {
+  grid-column: 1/13;
+  text-align: center;
 }
 .main .catch {
   display: grid;
+  height: 480px;
 }
 @media (min-width: 1024px) {
   .main .catch {
-    grid-template-columns: repeat(7, 1fr);
+    grid-template-columns: repeat(8, 1fr);
   }
+}
+.main .catch img.background {
+  height: 100%;
+  object-fit: unset;
+}
+@media (min-width: 1024px) {
   .main .catch .desktop {
     grid-column: 1/5;
     grid-row: 1/1;
   }
+}
+@media (min-width: 1024px) {
   .main .catch .image {
     grid-row: 1/1;
     z-index: -1;
-    grid-column: 4/8;
+    grid-column: 4/9;
   }
 }
-.main .catch img {
-  height: 100%;
+.main .catch .image {
+  object-fit: cover;
 }
 .main .team_go_rocket {
   display: grid;
