--- a/styles/styles.less
+++ b/styles/styles.less
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-weight: 300;
   background: #0c1c3e;
@@ -194,6 +198,61 @@ nav {
   .team_go_rocket,
   .download {
     overflow: hidden;
+    position: relative;
+
+    .content_wrap {
+      @media (max-width: 767px) {
+      }
+      @media (min-width: 768px) and (max-width: 1023px) {
+      }
+      @media (min-width: 1024px) {
+      }
+
+      .content {
+        text-align: left;
+
+        .title {
+          font-weight: 900;
+
+          @media (max-width: 767px) {
+            font-size: 28px;
+            line-height: 34px;
+          }
+          @media (min-width: 768px) {
+            font-size: 32px;
+            line-height: 45px;
+          }
+          @media (min-width: 1204px) {
+            font-size: 36px;
+            line-height: 52px;
+          }
+        }
+
+        .body {
+          padding-top: 1em;
+        }
+
+        .button_pill {
+          padding-top: 1.5em;
+
+          a {
+            font-size: 14px;
+            color: #0061af;
+            font-weight: 700;
+            border: 2px solid #0061af;
+            padding: 8px 24px;
+            border-radius: 999px;
+            background-color: #fff;
+            transition: background-color 0.3s ease;
+            text-decoration: none;
+
+            &:hover {
+              background-color: #d1eefd;
+            }
+          }
+        }
+      }
+    }
   }
 
   .intro,
@@ -238,41 +297,262 @@ nav {
     }
   }
 
-  // .intro {
-  // }
+  .intro {
+    height: 800px;
 
-  .new_user {
-    min-height: 222px;
+    @media (max-width: 767px) {
+      min-height: 720px;
+    }
+    @media (min-width: 768px) and (min-width: 1023px) {
+      min-height: 720px;
+    }
+    @media (min-width: 1024px) {
+      min-height: 720px;
+    }
+
+    img.background {
+      object-fit: cover;
+      height: 800px;
+
+      @media (max-width: 767px) {
+        min-height: 720px;
+      }
+      @media (min-width: 768px) and (min-width: 1023px) {
+      }
+      @media (min-width: 1024px) {
+      }
+    }
+
+    .content_wrap {
+      grid-template-columns: 1fr 4fr 1fr;
+      top: calc(8.5% + 80px);
+      left: 0;
+      margin: 0 auto;
+      width: 55%;
+
+      @media (max-width: 767px) {
+        top: 90px;
+      }
+      @media (min-width: 768px) and (max-width: 1023px) {
+      }
+      @media (min-width: 1024px) {
+        //left: calc(50% - 300px);
+      }
+
+      .content {
+        color: #fff;
+        grid-column: 2/3;
+        text-shadow: 1px 1px 2px rgb(0 0 0 / 40%);
+        text-align: center;
+      }
+    }
+
+    .callout_wrap {
+      margin: 0 auto;
+      grid-template-columns: 1fr 4fr 1fr;
+
+      @media (max-width: 768px) {
+        top: calc(25% + 80px);
+      }
+      @media (min-width: 768px) {
+        top: calc(40% + 80px);
+      }
+      @media (min-width: 1024px) {
+      }
+
+      img {
+        width: unset;
+      }
+
+      .callout {
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        grid-column: 2/3;
+        text-align: center;
+
+        .logo {
+          grid-row: 1/2;
+
+          img {
+            height: 115px;
+
+            @media (max-width: 768px) {
+              height: 115px;
+            }
+            @media (min-width: 768px) and (max-width: 1023px) {
+            }
+            @media (min-width: 1024px) {
+              height: 180px;
+            }
+          }
+        }
+
+        .badges {
+          //margin-top: 24px;
+          display: flex;
+          column-gap: 12px;
+          justify-content: center;
+          align-self: center;
+          grid-row: 3/4;
+
+          @media (max-width: 768px) {
+            flex-direction: column;
+            align-items: center;
+            align-self: end;
+            row-gap: 12px;
+          }
+          @media (min-width: 768px) and (max-width: 1023px) {
+          }
+          @media (min-width: 1024px) {
+            grid-row: 2/3;
+          }
+
+          img {
+            height: 40px;
+          }
+        }
+      }
+    }
+
+    .intro_jump_wrap {
+      position: absolute;
+
+      @media (max-width: 767px) {
+      }
+      @media (min-width: 768px) and (min-width: 1023px) {
+        right: 60px;
+        bottom: 60px;
+      }
+      @media (min-width: 1024px) {
+      }
+
+      img {
+        opacity: 0.6;
+        transition: ease-in-out 0.1s;
+
+        &:hover {
+          opacity: 1;
+        }
+      }
+    }
   }
 
-  // .news {
-  // }
+  .new_user {
+    max-height: 222px;
+
+    .content_wrap {
+      position: absolute;
+      top: 0;
+      height: 222px;
+      grid-template-columns: 1fr 8fr 1fr;
+
+      @media (min-width: 768px) {
+        margin: 0;
+        padding: 0 24px;
+        max-width: 100%;
+      }
+
+      .new_user_inner {
+        grid-template-columns: 130px 1fr 1fr;
+        grid-column: 1/5;
+        padding: 0;
+
+        @media (max-width: 767px) {
+        }
+        @media (min-width: 768px) and (max-width: 1023px) {
+          padding: 40px 0;
+        }
+        @media (min-width: 1024px) {
+          grid-column: 2/3;
+        }
+
+        div {
+          align-self: center;
+        }
+
+        img {
+          height: 130px;
+          width: auto;
+        }
+
+        .icon {
+          grid-column: 1/2;
+        }
+
+        .content {
+          grid-column: 2/3;
+        }
+
+        .image {
+          grid-column: 3/4;
+        }
+      }
+    }
+  }
+
+  .news {
+    .loading {
+      height: 30px;
+      width: auto;
+    }
+
+    &.ready {
+      .loading {
+        display: none;
+      }
+    }
+
+    .content_wrap {
+      height: 100%;
+
+      @media (max-width: 767px) {
+      }
+      @media (min-width: 768px) {
+        padding: 60px 0;
+      }
+
+      .content {
+        grid-column: 1/13;
+        text-align: center;
+      }
+    }
+  }
 
   // .events {
   // }
 
   .catch {
     display: grid;
+    height: 480px;
 
     @media (min-width: 0px) and (max-width: 1023px) {
     }
     @media (min-width: 1024px) {
-      grid-template-columns: repeat(7, 1fr);
+      grid-template-columns: repeat(8, 1fr);
+    }
 
-      .desktop {
+    img.background {
+      height: 100%;
+      object-fit: unset;
+    }
+
+    .desktop {
+      @media (min-width: 1024px) {
         grid-column: 1/5;
         grid-row: 1/1;
       }
+    }
 
-      .image {
+    .image {
+      @media (min-width: 1024px) {
         grid-row: 1/1;
         z-index: -1;
-        grid-column: 4/8;
+        grid-column: 4/9;
       }
     }
 
-    img {
-      height: 100%;
+    .image {
+      object-fit: cover;
     }
   }
 
@@ -443,21 +723,6 @@ nav {
           @media (min-width: 1024px) {
           }
         }
-
-        // .name {
-        //   position: absolute;
-        //   top: 9em;
-        //   right: 5em;
-
-        //   @media (min-width: 0px) and (max-width: 767px) {
-        //     height: 15em;
-        //     margin-top: 5em;
-        //   }
-        //   @media (min-width: 768px) and (max-width: 1023px) {
-        //   }
-        //   @media (min-width: 1024px) {
-        //   }
-        // }
       }
 
       .names {
